welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:8: error: reassignment to val
  nbPas=nbPas-1
       ^